Remove falling text animation and update splash cursor to hide on panels

--- a/index.html
+++ b/index.html
@@ -40,14 +40,9 @@
         <div class="hero-container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <div class="hero-name-container">
-                        <div class="name-box" id="nameBox">
-                            <h1 class="hero-title" id="heroName">
-                                <span class="typing-text">Sai Manikanta Teja Parwatha</span>
-                            </h1>
-                        </div>
-                        <button class="dont-click-btn" id="dontClickBtn">Don't Click!</button>
-                    </div>
+                    <h1 class="hero-title">
+                        <span class="typing-text">Sai Manikanta Teja Parwatha</span>
+                    </h1>
                     <h2 class="hero-subtitle" id="heroSubtitle">Penetration Tester & Security Analyst</h2>
                     <p class="hero-description" id="heroDescription">
                         Offensive security specialist with 3+ years of experience in penetration testing, 
