--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">SMT<span class="logo-accent">P</span></span>
+                <i class="fas fa-user-secret"></i>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
