9-28-2025 - added security+ certificate

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <!-- Certificate download button and Verify button (stacked) -->
                     <div class="cert-actions">
                         <a class="btn btn-primary" href="securityplus.pdf" download>Certificate (PDF)</a>
-                        <a class="btn btn-verify" href="https://www.comptia.org/certifications/security-plus" target="_blank" rel="noopener">Verify / Learn More</a>
+                        <a class="btn btn-verify" href="https://www.certmetrics.com/comptia/public/verification.aspx/" target="_blank" rel="noopener">Verify / Learn More</a>
                     </div>
                 </div>
                 <div class="cert-card">
